@@ -22,5 +22,8 @@ package org.apache.avro;
 /** Thrown when an illegal type is used. */
 public class AvroTypeException extends AvroRuntimeException {
   public AvroTypeException(String message) { super(message); }
+  public AvroTypeException(String message, Throwable cause) {
+    super(message, cause);
+  }
 }
 
